se agrega y configura sidebar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora &mdash; Modo Comando</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/sidebar.css" />
 </head>
 <body>
+<div id="sidebar-component"></div>
 <div class="app">
 
     <header class="header">
@@ -83,6 +85,7 @@
 
     </div>
 </div>
+<script src="js/sidebar.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
