--- a/frontend/sidebar.html
+++ b/frontend/sidebar.html
@@ -1,9 +1,8 @@
-<nav id="sidebar" class="sidebar">
+<nav id="sidebar" class="sidebar collapsed">
   <button id="toggle-btn" class="toggle-btn">☰</button>
 
   <ul class="menu">
-    <li><a href="/vistas/index.html">Inicio</a></li>
-    <li><a href="/vistas/servicios.html">Servicios</a></li>
-    <li><a href="/vistas/contacto.html">Contacto</a></li>
+    <li><a href="index.html">🧮 Calculadora Command</a></li>
+    <li><a href="scientific.html">🔬 Calculadora Científica</a></li>
   </ul>
 </nav>
