se agrega conversor de unidades

--- a/frontend/sidebar.html
+++ b/frontend/sidebar.html
@@ -4,5 +4,6 @@
   <ul class="menu">
     <li><a href="index.html">🧮 Calculadora Command</a></li>
     <li><a href="scientific.html">🔬 Calculadora Científica</a></li>
+    <li><a href="converter.html">📐 Conversor de Unidades</a></li>
   </ul>
 </nav>
